src/test/deca/context/invalid/created/field-call-bad.deca
//Description :
// Test d'un appel d'attribut
//
// Resultats :
// Erreur

class A {
    int a;
}

{
    A a = new A();
    a.b;
}
